# varpro

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  README.md  Todo.md  codecov.yml  katex-header.html  run_tests.sh
.github/workflows/: build-msrv.yml  build.yml  ci_linux.yml  coverage.yml  lints.yml  tests.yml
benches/: double_exponential_without_noise.rs  multiple_right_hand_sides.rs
matlab/: README.md  varpro.m
matlab/examples/: adaex.m  varpro_example.m
python/: multiexp-fit.py  multiexp_decay.py  weighted_multiexp_decay.py
shared_test_code/: Cargo.toml
shared_test_code/src/: levmar_mrhs.rs  lib.rs  models.rs
shared_test_code/src/models/: uncached.rs
src/: fit.rs  lib.rs  prelude.rs  problem.rs  readme.rs  test_helpers.rs  types.rs
src/basis_function/: detail.rs  mod.rs  test.rs
src/linalg_helpers/: mod.rs  test.rs
src/linear_algebra/: mod.rs  test.rs
src/model/: basefunction.rs  detail.rs  errors.rs  mod.rs  model_basis_function.rs  modelfunction.rs  test.rs
src/model/builder/: error.rs  mod.rs  modelfunction_builder.rs  proxies.rs  test.rs
src/model/builder/modelfunction_builder/: mod.rs  test.rs
src/model/detail/: test.rs
src/problem/: builder.rs
src/problem/builder/: test.rs
src/solvers/: levmar.rs  linear_solvers.rs  mod.rs
src/solvers/levmar/: .mod.rs.rustfmt  builder.rs  levmar_problem.rs  mod.rs  qr.rs  test.rs  weights.rs
src/solvers/levmar/builder/: test.rs
src/solvers/levmar/decomp/: mod.rs
src/solvers/levmar/levmar_problem/: colpiv_qr.rs  svd.rs
src/solvers/levmar/multipe_rhs/: mod.rs
src/solvers/levmar/qr/: test.rs
src/statistics/: mod.rs  test.rs
src/statistics/numeric_traits/: mod.rs
src/test_helpers/: differentiation.rs  mod.rs
src/util/: mod.rs  test.rs  weights.rs
test_assets/: conf_1000_64bit.raw
test_assets/multiexp_decay/: covmat_5x5_64bit.raw  xdata_1000_64bit.raw  ydata_1000_64bit.raw
test_assets/weighted_multiexp_decay/: conf_1000_64bit.raw  covmat_5x5_64bit.raw
tests/: common.rs  double_exponential_fitting.rs
tests/integration_tests/: common.rs  fit_result_tests.rs  levmar.rs  main.rs
varpro/: Cargo.toml  README.md
varpro/benches/: double_exponential_without_noise.rs
varpro/benches/detail/: mod.rs
varpro/src/: lib.rs  prelude.rs
varpro/src/linalg_helpers/: mod.rs  test.rs
varpro/src/model/: detail.rs  mod.rs  model_basis_function.rs  test.rs
varpro/src/model/builder/: error.rs  mod.rs  test.rs
varpro/src/model/builder/modelfunction_builder/: test.rs
varpro/src/model/detail/: test.rs
varpro/src/solvers/levmar/: builder.rs  mod.rs  test.rs  weights.rs
varpro/src/solvers/levmar/builder/: test.rs
varpro/src/test_helpers/: differentiation.rs  mod.rs
varpro/tests/integration_tests/: common.rs  levmar.rs  main.rs
