[package]
name = "varpro"
version = "0.2.0"
authors = ["geo-ant"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/geo-ant/varpro"
repository = "https://github.com/geo-ant/varpro"
description = "A straightforward nonlinear least-squares fitting library which uses the Variable Projection algorithm."
readme = "README.md"
categories = ["mathematics","science","algorithms"]
keywords = ["nonlinear","least","squares","fitting","regression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
levenberg-marquardt = "0.11"
nalgebra = "0.29"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --open
rustdoc-args = [ "--html-in-header", "katex-header.html" ]