[package]
name = "varpro"
version = "0.8.0"
authors = ["geo-ant"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/geo-ant/varpro"
repository = "https://github.com/geo-ant/varpro"
description = "A straightforward nonlinear least-squares fitting library which uses the Variable Projection algorithm."
readme = "README.md"
categories = ["mathematics", "science", "algorithms"]
keywords = ["nonlinear", "regression", "function", "fitting", "least-squares"]

[workspace]
members = ["shared_test_code"]

[dependencies]
thiserror = "1"
levenberg-marquardt = "0.13"
nalgebra = { version = "0.32" } #, features = ["rayon"]}
num-traits = "0.2"
# rayon = "1.6"

[dev-dependencies]
approx = "0.5"
num-complex = "0.4"
criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
shared_test_code = { path = "./shared_test_code" }
assert_matches = "1.5"
mockall = "0.11"
rand = "0.8"

[[bench]]
name = "double_exponential_without_noise"
harness = false

[[bench]]
name = "multiple_right_hand_sides"
harness = false

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
