[package]
name = "shared_test_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varpro = {path = "../"}
nalgebra = "0.34"
num-traits = "0.2"
levenberg-marquardt = "0.15"
approx = "0.5"
rand = "0.8"
